--- a/package.json
+++ b/package.json
@@ -2,5 +2,25 @@
   "dependencies": {
     "n": "^8.0.2",
     "prompt": "^1.2.1"
-  }
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
+  },
+  "name": "softwareslammers",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DominicPisano/SoftwareSlammers.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DominicPisano/SoftwareSlammers/issues"
+  },
+  "homepage": "https://github.com/DominicPisano/SoftwareSlammers#readme",
+  "description": ""
 }
